# django_task_manager

./: README.md  docker-compose.yml  pyproject.toml
taskmanager/accounts/: urls.py  views.py
taskmanager/accounts/migrations/: 0001_initial.py  0002_alter_taskmanageruser_email_and_more.py  0003_remove_taskmanageruser_groups_and_more.py
taskmanager/taskmanager/: settings.py  urls.py
taskmanager/tasks/: admin.py  context_processors.py  converters.py  fields.py  forms.py  middlewares.py  mixins.py  models.py  services.py  urls.py  views.py
taskmanager/tasks/migrations/: 0001_initial.py  0013_alter_task_options.py
taskmanager/tasks/templatetags/: sprint_tags.py  tasks_filters.py
taskmanager/templates/: 404.html
taskmanager/templates/accounts/: custom_password_reset_email.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm_form.html  password_reset_form.html  register.html
taskmanager/templates/tasks/: _footer.html  _header.html  base.html  contact_form.html  contact_success.html  help.html  home.html  manage_epic.html  task_confirm_delete.html  task_detail.html  task_list.html
