[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["Himanshu <kandpallucky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.2"
psycopg = {extras = ["binary"], version = "^3.1.18"}
django-widget-tweaks = "^1.5.0"
pillow = "^10.2.0"
django-redis = "^5.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
